--- a/roles/docker/containers/tasks/main.yml
+++ b/roles/docker/containers/tasks/main.yml
@@ -1,8 +1,10 @@
 - name: Create docker network
-  community.docker.docker_network:
-    name: docker-network
-    state: present
-    ipam_config:
-      - subnet: 172.0.0.0/24
-  become: yes
-  become_user: dockeruser
+  block:
+    - name: Create docker network
+      community.docker.docker_network:
+        name: docker-network
+        state: present
+        ipam_config:
+          - subnet: 172.0.0.0/24
+        become: yes
+        become_user: dockeruser
